[workspace]
members = [
    "fast3d",
    "libsm64_lock",
    "sm64_layout",
    "sm64_var_dump",
    "wafel_api",
    "wafel_app",
    "wafel_core",
    "wafel_data_access_derive",
    "wafel_data_access",
    "wafel_data_type",
    "wafel_layout",
    "wafel_memory",
    "wafel_python",
    "wafel_sm64",
    "wafel_timeline",
    "wafel_viz_demo",
    "wafel_viz_tests",
    "wafel_viz",
]
resolver = "2"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
