[workspace]
members = [
    "fast3d",
    "libsm64_lock",
    "sm64_layout",
    "sm64_var_dump",
    "wafel_api",
    "wafel_app_ui",
    "wafel_app",
    "wafel_core",
    "wafel_data_access_derive",
    "wafel_data_access",
    "wafel_data_type",
    "wafel_layout",
    "wafel_memory",
    "wafel_python",
    "wafel_sm64",
    "wafel_timeline",
    "wafel_viz_demo",
    "wafel_viz_sm64",
    "wafel_viz_tests",
    "wafel_viz_wgpu",
    "wafel_viz",
    "wafel_window",
]
resolver = "2"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
wgpu = "0.19.3"
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"
egui_dock = "0.11.2"
winit = "0.29.13"
