[package]
name = "wafel_api"
version = "0.1.0"
edition = "2018"

[dependencies]
wafel_data_path = { path = "../wafel_data_path" }
wafel_data_type = { path = "../wafel_data_type" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }
wafel_timeline = { path = "../wafel_timeline" }
deepsize = "0.2.0"
lru = "0.6.5"
