[package]
name = "wafel_api"
version = "0.1.0"
edition = "2021"

[dependencies]
wafel_data_access = { path = "../wafel_data_access" }
wafel_data_type = { path = "../wafel_data_type" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }
wafel_sm64 = { path = "../wafel_sm64" }
wafel_timeline = { path = "../wafel_timeline" }
wafel_viz = { path = "../wafel_viz" }
wafel_viz_sm64 = { path = "../wafel_viz_sm64" }
deepsize = "0.2.0"
lru = "0.7.7"
pwbox = "0.5.0"
# hex = { version = "0.4.3", features = ["alloc"] }  # Fix build of pwbox
exonum_sodiumoxide = "0.0.24" # Fix build of pwbox
rand = "0.8.4"
serde_json = "1.0.64"
