[package]
name = "wafel_app"
version = "0.8.5" # Important: be sure to re-run `python build.py lock` after changing!
edition = "2021"

[dependencies]
chrono = "0.4.29"
egui = "0.22.0"
image = "0.24.7"
once_cell = "1.18.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
wgpu = "0.17.0"
winit = "0.28.6"
wafel_app_logic = { path = "../wafel_app_logic" }
