[package]
name = "wafel_app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.29"
egui = "0.22.0"
image = "0.24.7"
once_cell = "1.18.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
wgpu = { workspace = true }
winit = "0.28.6"
wafel_app_ui = { path = "../wafel_app_ui" }
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
sysinfo = { version = "0.29.10", default-features = false }
wafel_viz = { path = "../wafel_viz", features = ["wgpu"] }
hot-lib-reloader = "0.6.5"
