[package]
name = "wafel_app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.29"
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
image = "0.24.7"
once_cell = "1.18.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
wgpu = { workspace = true }
winit = "0.28.6"
wafel_app_ui = { path = "../wafel_app_ui" }
sysinfo = { version = "0.29.10", default-features = false }
wafel_viz_wgpu = { path = "../wafel_viz_wgpu" }
wafel_viz = { path = "../wafel_viz" }
hot-lib-reloader = "0.6.5"

[features]
reload = []
