[package]
name = "wafel_app_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui.workspace = true
egui_dock = "0.8.1"
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
wafel_api = { path = "../wafel_api" } # TODO: Maybe this shouldn't be a dependency
wafel_data_access = { path = "../wafel_data_access" } # TODO: Export from wafel_api?
wafel_data_type = { path = "../wafel_data_type" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }

[lib]
crate-type = ["rlib", "dylib"]
