[package]
name = "wafel_core"
version = "0.1.0"
edition = "2018"

[lib]
name = "wafel_core"
crate-type = ["cdylib"]

[dependencies]
wafel_api = { path = "../wafel_api" }
derive_more = "0.99.14"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
indexmap = "1.6.2"
serde = { version = "1.0.126", features = ["derive", "rc"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
futures = "0.3.15"
winit = "0.25.0"
bytemuck = "1.5.1"
nalgebra = "0.25.4"
image = "0.23.14"
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.18"
