[package]
name = "wafel_graphics"
version = "0.1.0"
edition = "2018"

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
imgui = "0.7.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
env_logger = "0.8.4"
log = "0.4.14"
pollster = "0.2.4"
winit = "0.25.0"
imgui-winit-support = { version = "0.7.1", default-features = false, features = ["winit-25"] }
image = "0.23.14"
