[package]
name = "wafel_graphics"
version = "0.1.0"
edition = "2018"

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
imgui = "0.8.2"
wgpu = "0.12.0"
log = "0.4.14"
pollster = "0.2.4"
winit = "0.26.0"
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
image = "0.23.14"
