[package]
name = "wafel_memory"
version = "0.1.0"
edition = "2018"

[dependencies]
wafel_data_type = { path = "../wafel_data_type" }
wafel_layout = { path = "../wafel_layout" }
once_cell = "1.7.2"
dlopen = "0.1.8"
winapi = { version = "0.3.9", features = ["dbghelp", "processthreadsapi"] }
tempfile = "3.2.0"
