[package]
name = "wafel_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
wafel_data_type = { path = "../wafel_data_type" }
wafel_layout = { path = "../wafel_layout" }
once_cell = "1.7.2"
dlopen = "0.1.8"
winapi = { version = "0.3.9", features = ["dbghelp", "processthreadsapi"] }
tempfile = "3.2.0"
same-file = "1.0.6"
process-memory = "0.4.0"
bytemuck = "1.10.0"
sysinfo = "0.29.10"
