[package]
name = "wafel_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.9.1"
env_logger = "0.9.0"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
fast3d = { path = "../fast3d", features = ["wgpu"] }
wafel_api = { path = "../wafel_api" }
wafel_data_type = { path = "../wafel_data_type" }
wafel_data_access = { path = "../wafel_data_access" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }
wafel_sm64 = { path = "../wafel_sm64" }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.26.1"
bitflags = "1.3.2"
itertools = "0.10.3"
