[package]
name = "wafel_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.11.0", features = ["derive"] }
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
fast3d = { path = "../fast3d", features = ["wgpu"] }
wafel_data_type = { path = "../wafel_data_type" }
wafel_data_access = { path = "../wafel_data_access" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }
wafel_sm64 = { path = "../wafel_sm64" }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
bitflags = "1.3.2"
