[package]
name = "wafel_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.11.0", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
fast3d = { path = "../fast3d", features = ["wgpu"] }
wafel_data_type = { path = "../wafel_data_type" }
wafel_data_access = { path = "../wafel_data_access" }
wafel_layout = { path = "../wafel_layout" }
wafel_memory = { path = "../wafel_memory" }
wafel_sm64 = { path = "../wafel_sm64" }
wgpu = { workspace = true }
bitflags = "1.3.2"
ultraviolet = "0.9.0"
