[package]
name = "wafel_viz_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
fast3d = { path = "../fast3d", features = ["wgpu"] }
pollster = "0.2.5"
wafel_api = { path = "../wafel_api" }
wafel_data_access = { path = "../wafel_data_access" }
wafel_memory = { path = "../wafel_memory" }
wafel_viz = { path = "../wafel_viz" }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.26.1"
