[package]
name = "wafel_viz_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
pollster = "0.2.5"
wafel_api = { path = "../wafel_api" }
wafel_data_access = { path = "../wafel_data_access" }
wafel_memory = { path = "../wafel_memory" }
wafel_viz = { path = "../wafel_viz" }
wgpu = "0.13.0"
winit = "0.26.1"
