[package]
name = "wafel_viz_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
image = "0.24.2"
fast3d = { path = "../fast3d", features = ["wgpu"] }
wafel_api = { path = "../wafel_api" }
wafel_viz = { path = "../wafel_viz" }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
