[package]
name = "wafel_viz_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
image = "0.24.2"
wafel_api = { path = "../wafel_api" }
wafel_viz = { path = "../wafel_viz", features = ["wgpu"] }
wgpu = { workspace = true }
pollster = "0.2.5"
itertools = "0.10.3"
wafel_memory = { version = "0.1.0", path = "../wafel_memory" }
