[package]
name = "wafel_viz_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wafel_viz = { path = "../wafel_viz" }
bytemuck = { version = "1.11.0", features = ["derive"] }
fast3d = { path = "../fast3d", features = ["wgpu"] }
wgpu = { workspace = true }
ultraviolet = { version = "0.9.0", features = ["bytemuck"] }
enum-map = "2.6.3"
