[package]
name = "wafel_window"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.29"
wgpu = { workspace = true }
winit = "0.28.6"
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
pollster = "0.3.0"
image = { version = "0.24.7", optional = true }
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
hot-lib-reloader = "0.6.5"
wafel_viz = { path = "../wafel_viz" }
wafel_viz_wgpu = { path = "../wafel_viz_wgpu" }
static_assertions = "1.1.0"
indexmap = "2.0.2"

[dev-dependencies]
wafel_api = { path = "../wafel_api" }
wafel_viz_sm64 = { path = "../wafel_viz_sm64" }
